# azadi-noweb

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  filepath  justfile  noweb.md  nowtest.md  rename_md.sh  result  shell.nix
.cargo/: config.toml
aza11/: noweb_test.rs
aza2/: 01-workflows.txt  02-packaging.txt  03-pkg_scripts.txt  04-default-nix.txt  05-cargo-fixes-for-nix.txt  06-cachix-fix.txt  07-fix-nix-build.txt  08-cachix-another-fix.txt  09-cachix-xx.txt  10-shell-nix.txt  11-shell-nix.txt  12-shell-nix.txt  13-shell-nix.txt  14-justfile.txt  15-flakes-unified.txt  16-gen-packs.txt  17-void-variants.txt  18-pack-new.txt  19-pyproject.txt  20-templates.txt  21-de-templ.txt  22-build-workflows.txt
aza3/: 00-errors.txt  00-introduction.txt  00-test-common.md.txt  00-test-setup.rs.rs  00-test.md  01-core-types.md  01-more-fixtures.md.txt  01-test-constants.rs.rs  01-test.md  02-basic-tests.md.txt  02-basic-tests.rs.rs  02-chunk-store.md  02-templates.txt  02-test.md  03-advanced-tests.md.txt  03-chunk-expansion.md  03-compose.txt  03-file-tests.rs.rs  03-test.md  04-chunk-expansion-content.md  04-error-tests.rs.rs  04-main.md  04-test.md  05-chunk-store-access.md  05-cross-reference-tests.rs.txt  05-noweb.md  05-noweb.md.obsolete  05-noweb.md.partial  06-chunk-writer-and-clip.md  06-docker.txt  06-misc-tests.rs.rs  06-noweb.md  06-tests.md  07-complete-optimization.md.txt  07-file-store.md  07-generator-complete.txt  07-mutual-recursion-test.rs.rs  07-noweb.md  08-builder-intro.txt  08-chunk-location-update.md  (+17 more)
aza4/: 00-introduction.txt  01-docker-chunks.txt  04-generator.txt  05-workflows.txt  06-nix-workflow.txt
aza5/: 00-introduction.txt  01-type-definitions.txt  02-docker-setup.txt  03-generator-core.txt  04-builders.txt  05-workflow-templates.txt  06-main-workflow.txt  07-chunk-connections.txt
aza6/: 00-guide (1).txt  00-guide (2).txt  00-guide.md  01-core_concepts.md  01-types.txt  02-metadata.txt  03-builders.txt  04-generator.txt  05-templates.txt  07-workflows.txt  improved-guide.md  peppo.txt
aza7/: 02-noweb_implementation.md  03-tests.md
doc/: Azadi-Noweb-Guide-Final.md  Azadi-Noweb-Guide.md
packaging/: cargo-metadata.toml
packaging/scripts/: _pyproject.toml  builders.py  docker-void.sh  errors.py  generate_packages.py  generator.py  get-version.sh  makepkg.conf  metadata.py  package_builders.py  pyproject.toml
packaging/scripts/docker/: Builders.dockerfile  Extensions.sh  Helpers.sh  docker-compose.yml
packaging/scripts/src/: arch_builder.py.old
packaging/scripts/src/pkg_gen/: docker.py  docker_void.py  errors.py  generator.py  metadata.py  pkgtypes.py
packaging/scripts/src/pkg_gen/builders/: __init__.py  arch_builder.py
packaging/scripts/src/pkg_gen/utils/: command.py
packaging/scripts/tests/: test_generator.py
src/: lib.rs  main.rs  noweb.rs  noweb_test.rs  safe_writer.rs  safe_writer_test.rs
temp/: noweb_advanced_test.rs  (+1 more)
(+50 files in other folders)
